tests/test_scope/bad/output/cyclic_scopes.catala_en.A.Interpret
[ERROR] Cyclic dependency detected between scopes!

Cycle variable B, declared:
 --> test_scope/bad/cyclic_scopes.catala_en
  | 
8 | declaration scope B:
  |                   ^
  + Article

Used here in the definition of another cycle variable A:
 --> test_scope/bad/cyclic_scopes.catala_en
  | 
5 |   context b scope B
  |           ^
  + Article

Cycle variable A, declared:
 --> test_scope/bad/cyclic_scopes.catala_en
  | 
4 | declaration scope A:
  |                   ^
  + Article

Used here in the definition of another cycle variable B:
 --> test_scope/bad/cyclic_scopes.catala_en
  | 
9 |   context a scope A
  |           ^
  + Article
